# MedVLMBenchPhase1

./: .gitignore  KAGGLE_WORKFLOW.md  LICENSE  MedCLIP_WORKFLOW.md  README.md  pyproject.toml  requirements.txt  requirements_kaggle.txt
EDA/eda_reports/: iu_cxr_missing_files.csv  iu_cxr_orphan_files.csv  iu_cxr_technical_unsatisfactory.csv  iu_cxr_unmatched_csv_rows.csv  sanity_normal_or_tech_iucxr_v01.csv  sanity_subset_iucxr_v02.csv
EDA/notebooks_eda/: chexperteda.ipynb
POC experimentation/notebooks_poc/: evaluate_vlm_models.py
POC_experimentation/notebooks_poc/: biomedclip_local.py  evaluate_vlm_models.py  medclip_demo.py
conf_elements/: Poster_MedVLM_Final.pptx  WARF_Discovery_Challenge_v10_SG.pptx  readme.txt
configs/: dataset_iu_v03_full.yaml  task_projection_v01.yaml
docs/: Evaluation_Tasks.md  KAGGLE_WORKFLOW.md  ModelLandscapeTable.md  ModularBenchmarkingFramework.md  PROJECT_OVERVIEW.md  Phase1_Overview.md  Phase2_Overview.md  sanity_dataset_process.md
medvlm_core/: dataloader.py  io.py  seeds.py  timer.py
notebooks/: MedCLIP_KaggleRunner_MedVLMPhase1.ipynb  biomedclip_local.py  eda_indiana_chestxray.html  eda_indiana_chestxray.ipynb  medclip_demo.py
phase1/configs/: dataset_iu_v03_full.kaggle.yaml  dataset_iu_v03_full.yaml  task_projection_v01.yaml
phase1/medvlm_core/: dataloader.py  logging.py  metrics.py  transforms.py
phase1/notebooks/: BioMedCLIP_KaggleRunner_MedVLMPhase1.ipynb  (+4 more)
sample_IUCXR_data/: sanity_sample_table.csv
scripts/: aggregate_projection.py  evaluate_views.py  projection_biomedclip.py  projection_medclip.py
(+43 files in other folders)
