[tool.poetry]
name = "medvlm-phase1"
version = "0.1.0"
description = "MedVLMPhase1 benchmarking"
authors = ["Dimple Khatri <dimplek0424@gmail.com>"]
readme = "README.md"
packages = [{ include = "medvlm_core" }]

[tool.poetry.dependencies]
# Poetry will use this interpreter (it already found 3.10.11 for you)
python = ">=3.10,<3.12"

# --- Stable scientific stack (works on Windows & Kaggle) ---
numpy = "1.26.4"
scipy = "1.11.4"
scikit-learn = "1.3.2"
opencv-python = "4.8.1.78"
pyyaml = "^6.0.1"
tqdm = "^4.66.5"

# --- HF stack compatible with MedCLIP ---
transformers = "4.24.0"
tokenizers = "0.13.3"
huggingface-hub = "^0.19.0"

# We DO NOT list torch/torchvision here.
#   - Locally: install via conda (CUDA-matched)
#   - Kaggle: already preinstalled

# --- MedCLIP from Git (PyPI versioning is inconsistent) ---
medclip = { git = "https://github.com/RyanWangZf/MedCLIP.git", branch = "main" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.8.0"
ruff = "^0.6.9"